--- a/Pokedex/Base.lproj/Main.storyboard
+++ b/Pokedex/Base.lproj/Main.storyboard
@@ -1,14 +1,21 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="pokemon.ttf">
+            <string>PokemonSolidNormal</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Pokedex" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +23,119 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" image="bg" translatesAutoresizingMaskIntoConstraints="NO" id="c2k-uU-iSS"/>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" verticalHuggingPriority="249" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="QU1-zU-cax">
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="lYe-vv-B3j">
+                                    <size key="itemSize" width="110" height="110"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PokeCell" id="9cx-HX-utl" customClass="PokeCell" customModule="Pokedex" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="110" height="110"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="110" height="110"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="6" translatesAutoresizingMaskIntoConstraints="NO" id="fx8-Hl-ER2"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7JT-w5-pKw">
+                                                    <color key="backgroundColor" red="1" green="0.34509803919999998" blue="0.33333333329999998" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="21" id="E7b-cM-h3d"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="12"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </view>
+                                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.69999999999999996" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstItem="7JT-w5-pKw" firstAttribute="top" secondItem="fx8-Hl-ER2" secondAttribute="bottom" id="34a-FF-ZP1"/>
+                                            <constraint firstItem="fx8-Hl-ER2" firstAttribute="top" secondItem="9cx-HX-utl" secondAttribute="top" id="3HO-6l-igr"/>
+                                            <constraint firstAttribute="trailing" secondItem="7JT-w5-pKw" secondAttribute="trailing" id="7og-xu-hWC"/>
+                                            <constraint firstAttribute="trailing" secondItem="fx8-Hl-ER2" secondAttribute="trailing" id="7r8-AZ-DR1"/>
+                                            <constraint firstItem="7JT-w5-pKw" firstAttribute="leading" secondItem="9cx-HX-utl" secondAttribute="leading" id="C3F-Io-eMh"/>
+                                            <constraint firstItem="fx8-Hl-ER2" firstAttribute="leading" secondItem="9cx-HX-utl" secondAttribute="leading" id="JQQ-Wn-5Ac"/>
+                                            <constraint firstAttribute="bottom" secondItem="7JT-w5-pKw" secondAttribute="bottom" id="Ot0-pb-tRW"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="nameLbl" destination="7JT-w5-pKw" id="Egi-6W-L0P"/>
+                                            <outlet property="thumbImg" destination="fx8-Hl-ER2" id="Ob2-2X-c6a"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                            <searchBar contentMode="redraw" searchBarStyle="minimal" placeholder="Búsqueda de Pokémons" translatesAutoresizingMaskIntoConstraints="NO" id="8nc-Co-YPh">
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gBE-xf-pEn">
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pokédex" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dR8-c4-xEw">
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="39" id="Amd-4L-EQv"/>
+                                            <constraint firstAttribute="width" constant="156" id="dMi-Nz-U7F"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="PokemonSolidNormal" family="Pokemon Solid" pointSize="25"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NYu-xW-tn0">
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="31" id="gJe-qO-8Tr"/>
+                                            <constraint firstAttribute="height" constant="31" id="kal-S6-Z22"/>
+                                        </constraints>
+                                        <state key="normal" image="music"/>
+                                        <connections>
+                                            <action selector="musicBtnPressedWithSender:" destination="BYZ-38-t0r" eventType="touchUpInside" id="LX5-Bc-zZh"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" red="1" green="0.34509803921568627" blue="0.33333333333333331" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="55" id="8dz-p4-pik"/>
+                                    <constraint firstItem="dR8-c4-xEw" firstAttribute="centerY" secondItem="gBE-xf-pEn" secondAttribute="centerY" id="AUs-VK-npV"/>
+                                    <constraint firstItem="NYu-xW-tn0" firstAttribute="top" secondItem="gBE-xf-pEn" secondAttribute="top" constant="12" id="ax2-Lh-E2b"/>
+                                    <constraint firstItem="dR8-c4-xEw" firstAttribute="centerX" secondItem="gBE-xf-pEn" secondAttribute="centerX" id="kxK-t0-kEM"/>
+                                    <constraint firstAttribute="trailing" secondItem="NYu-xW-tn0" secondAttribute="trailing" constant="8" id="z9j-o6-Kyd"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="QU1-zU-cax" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="0Vd-Z8-JLZ"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="QU1-zU-cax" secondAttribute="bottom" constant="20" id="3MI-ML-0rZ"/>
+                            <constraint firstAttribute="trailing" secondItem="c2k-uU-iSS" secondAttribute="trailing" id="5yR-Ia-J0k"/>
+                            <constraint firstItem="QU1-zU-cax" firstAttribute="top" secondItem="8nc-Co-YPh" secondAttribute="bottom" constant="20" id="QpM-mR-Gzs"/>
+                            <constraint firstItem="c2k-uU-iSS" firstAttribute="top" secondItem="8nc-Co-YPh" secondAttribute="bottom" id="RFg-Ar-9kJ"/>
+                            <constraint firstAttribute="trailing" secondItem="gBE-xf-pEn" secondAttribute="trailing" id="aEw-Fr-OiW"/>
+                            <constraint firstItem="gBE-xf-pEn" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="aQH-j4-UGE"/>
+                            <constraint firstAttribute="trailing" secondItem="8nc-Co-YPh" secondAttribute="trailing" id="cYJ-9V-RbW"/>
+                            <constraint firstItem="gBE-xf-pEn" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="20" id="iJZ-Xi-1oo"/>
+                            <constraint firstItem="QU1-zU-cax" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="kkP-2C-tkr"/>
+                            <constraint firstItem="8nc-Co-YPh" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="qrn-8i-a0C"/>
+                            <constraint firstItem="8nc-Co-YPh" firstAttribute="top" secondItem="gBE-xf-pEn" secondAttribute="bottom" id="vXe-7l-0SN"/>
+                            <constraint firstItem="c2k-uU-iSS" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="wCU-uJ-eS8"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="c2k-uU-iSS" secondAttribute="bottom" id="ymk-si-hQP"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="collection" destination="QU1-zU-cax" id="cZN-sy-8IU"/>
+                        <outlet property="searchBar" destination="8nc-Co-YPh" id="cqe-wq-Uyr"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="136.80000000000001" y="137.18140929535232"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="6" width="137" height="120"/>
+        <image name="bg" width="1920" height="1200"/>
+        <image name="music" width="48" height="48"/>
+    </resources>
 </document>
